# python-grpc

./: .gitignore  Makefile  README.md  pyproject.toml
app/: greet_client.py  greet_server.py
tests/: test_any.py
