[tool.poetry]
name = "python-grpc"
version = "0.1.0"
description = ""
authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
readme = "README.md"
packages = [{include = "python_grpc"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.2"
grpcio-tools = "^1.54.2"
grpcio = "^1.54.2"
protobuf = "^4.23.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
